Fix: Stack nav items on mobile view

--- a/public/blocks/_shared/components/Normalizer/Normalizer.scss
+++ b/public/blocks/_shared/components/Normalizer/Normalizer.scss
@@ -12,7 +12,7 @@
     margin-right: calc(50% - 50vw);
 
     @media screen and (max-width: 600px) {
-      margin: 0;
+      margin: 0 -20px; // This counteracts the 20px padding on state.gov's row element which contains the blocks
       width: 100vw;
     }
   }
